Formatting and Fixing -- Flip on Hover -- Spacing/padding -- Footer fix

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,5 @@
+
+@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 body {
   background: white;
 }
@@ -5,134 +7,146 @@ body {
   font-family: 'logoFont';
   src: url("fonts/logoFont.ttf");
 }
-@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
+html, body {
+    font-family: 'logoFont', sans-serif; /*Specify your font name here*/
+    -ms-text-size-adjust: 100%;
+    -webkit-text-size-adjust: 100%;
+}
+
+
 #team {
-    background: white;
-}
-#team .card{ background-color:#eee !important }
-#team .backside{ background-color:#eee !important }
-
-.btn-primary:hover,
-.btn-primary:focus {
-    background-color: #14374c;;
-    border-color: #14374c;
-    box-shadow: none;
-    outline: none;
-}
-
-.btn-primary {
-    color: #fff;
-    background-color: #14374c;
-    border-color: #14374c;
-}
-
-section {
-    padding: 60px 0;
-}
-
-section .section-title {
-    text-align: center;
-    color: #007b5e;
-    margin-bottom: 50px;
-    text-transform: uppercase;
+  background: white;
 }
 
 #team .card {
-    border: none;
-    background: #ffffff;
+  background-color: #eee !important;
 }
 
-.image-flip:hover .backside,
-.image-flip.hover .backside {
-    -webkit-transform: rotateY(0deg);
-    -moz-transform: rotateY(0deg);
-    -o-transform: rotateY(0deg);
-    -ms-transform: rotateY(0deg);
-    transform: rotateY(0deg);
-    border-radius: .25rem;
+#team .backside {
+  background-color: #eee !important;
 }
 
-.image-flip:hover .frontside,
-.image-flip.hover .frontside {
-    -webkit-transform: rotateY(180deg);
-    -moz-transform: rotateY(180deg);
-    -o-transform: rotateY(180deg);
-    transform: rotateY(180deg);
+.btn-primary:focus,
+.btn-primary:hover {
+  background-color: #14374c;
+  border-color: #14374c;
+  box-shadow: none;
+  outline: none;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #14374c;
+  border-color: #14374c;
+}
+
+section {
+  padding: 60px 0;
+}
+
+section .section-title {
+  text-align: center;
+  color: #007b5e;
+  margin-bottom: 50px;
+  text-transform: uppercase;
+}
+
+#team .card {
+  border: none;
+  background: #ffffff;
+}
+
+.image-flip.hover .backside,
+.image-flip:hover .backside {
+  -webkit-transform: rotateY(0deg);
+  -moz-transform: rotateY(0deg);
+  -o-transform: rotateY(0deg);
+  -ms-transform: rotateY(0deg);
+  transform: rotateY(0deg);
+  border-radius: 0.25rem;
+}
+
+.image-flip.hover .frontside,
+.image-flip:hover .frontside {
+  -webkit-transform: rotateY(180deg);
+  -moz-transform: rotateY(180deg);
+  -o-transform: rotateY(180deg);
+  transform: rotateY(180deg);
 }
 
 .mainflip {
-    -webkit-transition: 1s;
-    -webkit-transform-style: preserve-3d;
-    -ms-transition: 1s;
-    -moz-transition: 1s;
-    -moz-transform: perspective(1000px);
-    -moz-transform-style: preserve-3d;
-    -ms-transform-style: preserve-3d;
-    transition: 1s;
-    transform-style: preserve-3d;
-    position: relative;
+  -webkit-transition: 1s;
+  -webkit-transform-style: preserve-3d;
+  -ms-transition: 1s;
+  -moz-transition: 1s;
+  -moz-transform: perspective(1000px);
+  -moz-transform-style: preserve-3d;
+  -ms-transform-style: preserve-3d;
+  transition: 1s;
+  transform-style: preserve-3d;
+  position: relative;
 }
 
 .frontside {
-    position: relative;
-    -webkit-transform: rotateY(0deg);
-    -ms-transform: rotateY(0deg);
-    z-index: 2;
-    margin-bottom: 30px;
+  position: relative;
+  -webkit-transform: rotateY(0deg);
+  -ms-transform: rotateY(0deg);
+  z-index: 2;
+  margin-bottom: 30px;
 }
 
 .backside {
-    position: absolute;
-    top: 0;
-    left: 0;
-    background: white;
-    -webkit-transform: rotateY(-180deg);
-    -moz-transform: rotateY(-180deg);
-    -o-transform: rotateY(-180deg);
-    -ms-transform: rotateY(-180deg);
-    transform: rotateY(-180deg);
-    -webkit-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
-    -moz-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
-    box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: white;
+  -webkit-transform: rotateY(-180deg);
+  -moz-transform: rotateY(-180deg);
+  -o-transform: rotateY(-180deg);
+  -ms-transform: rotateY(-180deg);
+  transform: rotateY(-180deg);
+  -webkit-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+  -moz-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+  box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
 }
 
-.frontside,
-.backside {
-    -webkit-backface-visibility: hidden;
-    -moz-backface-visibility: hidden;
-    -ms-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-transition: 1s;
-    -webkit-transform-style: preserve-3d;
-    -moz-transition: 1s;
-    -moz-transform-style: preserve-3d;
-    -o-transition: 1s;
-    -o-transform-style: preserve-3d;
-    -ms-transition: 1s;
-    -ms-transform-style: preserve-3d;
-    transition: 1s;
-    transform-style: preserve-3d;
+.backside,
+.frontside {
+  -webkit-backface-visibility: hidden;
+  -moz-backface-visibility: hidden;
+  -ms-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-transition: 1s;
+  -webkit-transform-style: preserve-3d;
+  -moz-transition: 1s;
+  -moz-transform-style: preserve-3d;
+  -o-transition: 1s;
+  -o-transform-style: preserve-3d;
+  -ms-transition: 1s;
+  -ms-transform-style: preserve-3d;
+  transition: 1s;
+  transform-style: preserve-3d;
 }
 
-.frontside .card,
-.backside .card {
-    min-height: 312px;
+.backside .card,
+.frontside .card {
+  min-height: 312px;
 }
 
 .backside .card a {
-    font-size: 18px;
-    color: #14374c !important;
+  font-size: 18px;
+  color: #14374c !important;
 }
 
-.frontside .card .card-title,
-.backside .card .card-title {
-    color: #007b5e !important;
+.backside .card .card-title,
+.frontside .card .card-title {
+  color: #007b5e !important;
 }
 
 .frontside .card .card-body img {
-    width: 120px;
-    height: 120px;
-    border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
 }
 
 ul {
@@ -167,11 +181,13 @@ h5 {
 .bg-primary {
   background-color: #14374c;
 }
-.back{
+
+.back {
   font-weight: bold;
   margin-left: 15%;
   margin-top: 15%;
 }
+
 .card {
   display: none;
   border: none;
@@ -179,7 +195,6 @@ h5 {
 
 .cardcol {
   height: 100px;
-
 }
 
 .navbar {
@@ -188,18 +203,26 @@ h5 {
   width: 100%;
   background-color: #14374c;
   padding-top: 0;
+  padding-bottom: 0;
+}
+
+.navbar-brand {
+  text-align: center;
+  padding-left: 75px;
 }
 @media (max-width: 767px) {
   .navbar-brand {
     text-align: center;
+    padding-left: 10px;
   }
 }
-.flipcard{
-  cursor: pointer;
 
+.flipcard {
+  cursor: pointer;
 }
+
 .nav-link {
-  color: lightblue;
+  color: white;
   -o-transition: 0.5s;
   -ms-transition: 0.5s;
   -moz-transition: 0.5s;
@@ -232,21 +255,9 @@ a {
   right: 0;
   width: 100%;
 }
-@media screen and (max-width:900px) {
-
-}
-@media screen and (min-width:900px) {
-
-}
-@media screen and (min-width:1000px) {
-
-}
-@media screen and (min-width:1200px) {
-
-}
-@media screen and (min-width:1400px) {
-
-}
-@media screen and (min-width:1800px) {
-
-}
+@media screen and (max-width:900px) {}
+@media screen and (min-width:900px) {}
+@media screen and (min-width:1000px) {}
+@media screen and (min-width:1200px) {}
+@media screen and (min-width:1400px) {}
+@media screen and (min-width:1800px) {}
